--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML5 Boilerplate</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <h1>Todo</h1>
-  <script src="assets/js/script.js"></script>
+  <input id="taskInput" type="text" placeholder="Enter your note.">
+  <script src="/js/script.js"></script>
 </body>
 </html>
