--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <h1>Todo</h1>
+  <h1>Notes</h1>
   <input id="taskInput" type="text" placeholder="Enter your note.">
   <script src="/js/script.js"></script>
 </body>
